Add a Spark Structured Streaming console job reading dummy-topic
Standalone spark-streaming Maven module (Spark 4.2.0, spark-sql-kafka-0-10,
spark-avro) that decodes the same Confluent-wire-format Avro records the
Spring Boot producer writes, over the existing Kerberos/SASL_SSL + TLS
secured broker, and prints them to the console. Strips the 5-byte
Confluent header manually and fetches the writer schema from the Schema
Registry's REST API rather than pulling in ABRiS, to keep the wire format
visible and avoid its Scala-first API.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>